[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "wordllama"
dynamic = ["version"]
description = "WordLlama Embedding Utility"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "Lee Miller", email = "dleemiller@gmail.com" }]
dependencies = [
  "numpy",
  "safetensors",
  "tokenizers",
  "toml",
  "pydantic>=2",
  "requests"
]

[project.optional-dependencies]
train = [
  "accelerate",
  "torch>=2",
  "transformers>=4",
  "sentence-transformers",
  "datasets",
  "nltk",
]

[project.urls]
Homepage = "https://github.com/dleemiller"
Repository = "https://github.com/dleemiller/WordLlama"

[tool.setuptools]
packages = ["wordllama"]

[tool.setuptools.package-data]
wordllama = ["algorithms/*.so", "algorithms/*.pyd", "**/*.pyx", "**/*.pyd", "**/*.toml", "tokenizers/*.json", "weights/*.safetensors"]

[tool.setuptools.dynamic]
classifiers = { file = "classifiers.txt" }

[tool.setuptools_scm]
write_to = "wordllama/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.cibuildwheel]
archs = ["x86_64", "arm64"]
test-command = """
python -c "import wordllama; print(wordllama.__version__); \
from wordllama import WordLlama, Config, WordLlamaConfig; \
wl = WordLlama.load(); \
similarity_score = wl.similarity(\\"i went to the car\\", \\"i went to the pawn shop\\"); \
print(similarity_score);"
"""

[tool.cibuildwheel.macos]
before-all = """
brew install openblas && cat > ~/.numpy-site.cfg <<EOF
[openblas]
libraries = openblas
library_dirs = $(brew --prefix openblas)/lib
include_dirs = $(brew --prefix openblas)/include
runtime_library_dirs = $(brew --prefix openblas)/lib
EOF
"""

[tool.cibuildwheel.windows]
before-all = """
python -m ensurepip
python -m pip install --upgrade pip
"""

[tool.ruff]
ignore = ["E501"]
