[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]", "Cython", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "wordllama"
dynamic = ["version"]
description = "WordLlama NLP Utility"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Lee Miller", email = "dleemiller@gmail.com" }]
dependencies = [
  "numpy>=2",
  "safetensors",
  "tokenizers",
  "toml",
  "pydantic>=2",
  "requests"
]

[project.optional-dependencies]
dev = [
  "setuptools",
  "wheel",
  "setuptools_scm[toml]",
  "Cython",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-xdist>=3.3",
  "ruff>=0.1.0",
  "pre-commit>=3.5",
]
train = [
  "accelerate",
  "torch>=2",
  "transformers>=4",
  "sentence-transformers",
  "datasets",
  "nltk",
]

[project.urls]
Homepage = "https://github.com/dleemiller"
Repository = "https://github.com/dleemiller/WordLlama"

[tool.setuptools]
include-package-data = true  # Ensures non-code files are included in the package

[tool.setuptools.packages.find]
where = ["src"]
include = ["wordllama*"]

[tool.setuptools.package-data]
wordllama = [
    "algorithms/*.so",          # Compiled shared libraries
    "algorithms/*.pyd",         # Compiled Python extensions for Windows
    "algorithms/*.pyx",         # Cython source files
    "algorithms/*.pxd",         # Cython declaration files
    "**/*.pyx",                 # Catch any other *.pyx files
    "**/*.pxd",                 # Catch any other *.pxd files
    "**/*.toml",                # TOML configuration files
    "tokenizers/*.json",        # Tokenizer JSON configuration files
    "weights/*.safetensors"     # Model weights
]

[tool.setuptools.dynamic]
classifiers = { file = "classifiers.txt" }

[tool.setuptools_scm]
write_to = "src/wordllama/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.cibuildwheel]
archs = ["x86_64", "arm64"]
test-command = """
python -c "import wordllama; print(wordllama.__version__); \
from wordllama import WordLlama, Config, WordLlamaConfig; \
wl = WordLlama.load(); \
similarity_score = wl.similarity(\\"i went to the car\\", \\"i went to the pawn shop\\"); \
print(similarity_score);"
"""

[tool.cibuildwheel.macos]
# before-all = """
# brew install openblas libomp llvm
#
# # Create a NumPy site.cfg so that it detects your Homebrew-installed OpenBLAS
# cat > ~/.numpy-site.cfg <<EOF
# [openblas]
# libraries = openblas
# library_dirs = /usr/local/opt/openblas/lib
# include_dirs = /usr/local/opt/openblas/include
# runtime_library_dirs = /usr/local/opt/openblas/lib
# EOF
#
# # Use Homebrew's Clang/Clang++
# export CC=/usr/local/opt/llvm/bin/clang
# export CXX=/usr/local/opt/llvm/bin/clang++
# export PATH="/usr/local/opt/llvm/bin:$PATH"
#
# # Add necessary flags for libomp
# export CXXFLAGS="$CXXFLAGS -Xclang -fopenmp -I/usr/local/opt/libomp/include -I/usr/local/opt/openblas/include"
# export LDFLAGS="$LDFLAGS -L/usr/local/opt/libomp/lib -L/usr/local/opt/openblas/lib -lomp"
# """

[tool.cibuildwheel.windows]
before-all = """
python -m ensurepip
python -m pip install --upgrade pip
"""

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    "*.c",
    "*.cpp",
    "*.so",
    "*.pyd",
    ".pytest_cache",
    ".ruff_cache",
    "tutorials",
    "benchmark",
    "_version.py",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "PT",       # flake8-pytest-style
    "NPY",      # numpy-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "N802", "N803", "N806",  # naming conventions (conflicts with Cython)
    "T201",     # print statements (used in CLI/training)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["ARG001", "ARG002", "NPY002", "PT011"]
"train.py" = ["T201"]
"src/wordllama/_version.py" = ["UP035", "UP006", "I001"]  # Auto-generated by setuptools_scm
"src/wordllama/adapters/weighted_*.py" = ["N812"]  # F is PyTorch convention
"src/wordllama/extract/extract_llama_70B.py" = ["N999"]  # Matches model name

[tool.ruff.lint.isort]
known-first-party = ["wordllama"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=wordllama",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
]

[tool.coverage.run]
source = ["src/wordllama"]
omit = [
    "*/tests/*",
    "src/wordllama/_version.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
